Fixed style bugs on mobile.

--- a/density/static/css/style.css
+++ b/density/static/css/style.css
@@ -255,7 +255,6 @@ button.clear:hover {
 
 #locationBtnContainer{
     display:inline;
-    width: 50%;
    
     padding: 0 10px;
     position: relative;
@@ -264,7 +263,6 @@ button.clear:hover {
 
 #openBtnContainer{
     display: inline;
-    width: 50%;
    
     padding: 0 10px;
     position: relative;
@@ -452,6 +450,30 @@ img {
         padding: 10px;
     }
 
+    .searchTerm {
+        margin-bottom: 10px;
+    }
+
+    .searchButton {
+        right: 33px;
+    }
+
+    .searchContainer {
+        padding: 0 15px;
+    }
+
+    #nav-api {
+        display: none;
+    }
+
+    h4 {
+        font-size: 16px;
+    }
+
+    .btnContainer label {
+        margin-right: 5px;
+    }
+
     .textContainer {
         padding: 10px 0px;
     }
@@ -551,10 +573,8 @@ img {
     }
 
     .navItem {
-        padding-left: 15px;
-        padding-right: 15px;
-        padding-top: 5px;
-        padding-bottom: 5px;
+        padding: 5px 8px;
+        font-size: 14px;
     }
 
     .update {
